--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     is an information system enabling documents and other 
     web resources to be accessed over the Internet according 
     to specific rules, the Hypertext Transfer Protocol (HTTP).
+
+    Welcome to the 'World Wide Web'
 </p>
 </body>
 </html>
